server/compilers/goLiteJS/src/test/ml1/valid/type1.go
// all supported top-level type declarations
package main

type num int

type (
    num int
    word string
)
