server/compilers/goLiteJS/src/test/ml1/invalid/decl29.go
// missing type keyword
package main

num int
